Allow Magnify to resize to smaller sizes more gracefully.

Fixes ticket #4146

Signed-off-by: Matt Madia <mattmadia@gmail.com>